--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
-.add_padding {
-  background: orange !important;
+main {
+  height: calc(100vh - 56px);
 }
-/* use important as less as possible, like never  */
+
+.hero {
+  background: url("https://source.unsplash.com/94GiZLiWD8Y/") no-repeat fixed
+    center center/cover;
+  height: 100%;
+  color: white;
+}
